--- a/app/views/sites/edit.html.erb
+++ b/app/views/sites/edit.html.erb
@@ -2,7 +2,10 @@
 
 <% form_for(@site) do |f| %>
   <%= f.error_messages %>
-
+  <p>
+    <%= f.label :title %><br />
+    <%= f.text_field :title %>
+  </p>
   <p>
     <%= f.label :latitude %><br />
     <%= f.text_field :latitude %>
