--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,12 +1,6 @@
-<p>
-  <b>Latitude:</b>
-  <%=h @site.latitude %>
-</p>
+<h1>Site <%= h @site.title %> at: <%=h @site.latitude %> <%=h @site.longitude %> </h1>
 
-<p>
-  <b>Longitude:</b>
-  <%=h @site.longitude %>
-</p>
+<h2>Proposals for this site</h2>
 
 <p>
   <b>Description:</b>
