--- a/app/views/sites/edit.html.erb
+++ b/app/views/sites/edit.html.erb
@@ -7,6 +7,11 @@
     <%= f.text_field :title %>
   </p>
   <p>
+    <%= f.label :photo %><br />
+    <%= f.text_field :photo %>
+  </p>
+ 
+  <p>
     <%= f.label :latitude %><br />
     <%= f.text_field :latitude %>
   </p>
