--- a/app/views/layouts/sites.html.erb
+++ b/app/views/layouts/sites.html.erb
@@ -6,6 +6,9 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Sites: <%= controller.action_name %></title>
   <%= stylesheet_link_tag 'scaffold' %>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<script src="http://maps.google.com/maps?file=api&v=2.133d&key=ABQIAAAAYSHQGH7DwQYnligG_HNMtRRi_j0U6kJrkFvY4-OX2XYmEAa76BSbYtjHLWhy721irRhOUCrXiNZ2Ug" type="text/javascript"></script>
+	<%= yield :head %>
 </head>
 <body>
 <p style="color: green"><%= flash[:notice] %></p>
