--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -1,9 +1,6 @@
-<h1>New site</h1>
+<% content_for:head do %>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-  <script src="http://maps.google.com/maps?file=api&v=2.133d&key=ABQIAAAAYSHQGH7DwQYnligG_HNMtRRi_j0U6kJrkFvY4-OX2XYmEAa76BSbYtjHLWhy721irRhOUCrXiNZ2Ug" type="text/javascript"></script>
-  <script type="text/javascript">
-
+<script type="text/javascript">
   var map = null;
   var geocoder = null;
 
@@ -15,7 +12,7 @@
   function initialize() {
     if (GBrowserIsCompatible()) {
       map = new GMap2(document.getElementById("map_canvas"));
-      map.setCenter(new GLatLng(55.86731700468314, -4.250335693359375), 13);
+      map.setCenter(new GLatLng(55.8667230193505, -4.24999237060547), 13);
       map.addControl(new GSmallZoomControl());
       geocoder = new GClientGeocoder();
       GEvent.addListener(map, "click", clicked);
@@ -41,15 +38,21 @@
     }
   }
   </script>
+
+	<script type="text/javascript"> 
+		$(document).ready(function() {
+			initialize();
+		});
+		window.onunload=GUnload();
+	</script>
+
+
+<% end %>
+  
 </head>
 
-<body onload="initialize()" onunload="GUnload()">
 
-<script type="text/javascript"> 
-	body.onload=initialize();
-	body.onunload=GUnload();
-</script>
-
+<h1>New site</h1>
     <div id="map_canvas" style="width: 600px; height: 450px"></div>
 
 
