More stuff. Getting there.

--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -8,6 +8,10 @@
     <%= f.text_field :name %>
   </p>
   <p>
+    <%= f.label :avatar %><br />
+    <%= f.text_field :avatar %>
+  </p>
+  <p>
     <%= f.label :title %><br />
     <%= f.text_field :title %>
   </p>
