--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -4,6 +4,10 @@
 </p>
 
 <p>
+  <img width="100px" src="<%= @comment.avatar%>"> </img>
+</p>
+
+<p>
   <b>Title:</b>
   <%=h @comment.title %>
 </p>
