--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -1,5 +1,9 @@
 <p>
-  <b>Description:</b>
+  <b>Title:</b>
+  <%=h @proposal.title %>
+</p>
+<p>
+  Description:
   <%=h @proposal.description %>
 </p>
 
