--- a/app/views/layouts/sites.html.erb
+++ b/app/views/layouts/sites.html.erb
@@ -6,8 +6,13 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Sites: <%= controller.action_name %></title>
   <%= stylesheet_link_tag 'scaffold' %>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-<script src="http://maps.google.com/maps?file=api&v=2.133d&key=ABQIAAAAYSHQGH7DwQYnligG_HNMtRRi_j0U6kJrkFvY4-OX2XYmEAa76BSbYtjHLWhy721irRhOUCrXiNZ2Ug" type="text/javascript"></script>
+
+<!--><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>-->
+<%= javascript_include_tag 'jquery.js' %>
+<!--><script src="http://maps.google.com/maps?file=api&v=2.133d&key=ABQIAAAAYSHQGH7DwQYnligG_HNMtRRi_j0U6kJrkFvY4-OX2XYmEAa76BSbYtjHLWhy721irRhOUCrXiNZ2Ug" type="text/javascript"></script>-->
+<script src="http://maps.google.com/maps?file=api&v=2.133d&key=ABQIAAAAYSHQGH7DwQYnligG_HNMtRT2yXp_ZAY8_ufC3CFXhHIE1NvwkxTpRqH6LmxrFYRSv3GdHHrQfia4Yg" type="text/javascript"></script>
+<%= javascript_include_tag 'marker_manager.js' %>
+
 	<%= yield :head %>
 </head>
 <body>
