--- a/app/views/sites/heatmap.html.erb
+++ b/app/views/sites/heatmap.html.erb
@@ -1,5 +1,6 @@
 <% content_for :head do %>
-<script src="http://www.heatmapapi.com/javascript/HeatmapAPI.aspx?k=fd2cbcf8-5ed8-4edd-8e83-2c88fd9471bc" type="text/javascript"></script>
+<!--<script src="http://www.heatmapapi.com/javascript/HeatmapAPI.aspx?k=fd2cbcf8-5ed8-4edd-8e83-2c88fd9471bc" type="text/javascript"></script>-->
+<script src="http://www.heatmapapi.com/javascript/HeatmapAPI.aspx?k=848e3cac-9ccb-4d3c-88bd-338df3becd4b" type="text/javascript"></script>
 <script src="http://www.heatmapapi.com/javascript/HeatmapAPIGoogle.js" type="text/javascript"></script>
 
 <script type="text/javascript">
@@ -20,6 +21,7 @@
 
 	setTimeout('loadGoogle()', 1);
 
+
 	function initHeatmap()
 	{
 	 // Heatmap Scripts
@@ -30,8 +32,9 @@
 
 //	  var data = new Array();
 
-	  // Generate random lat/lon and value points
+	// Generate random lat/lon and value points
 		$.getJSON("/sites/data.json", function(pts) {
+			alert('blah');
 			var myHM = new GEOHeatmap();
 			myHM.Init(700, 600); // Must be same as map size, or same ratio
 			var data = new Array();
@@ -45,15 +48,17 @@
 				data.push(item.lat);
 				data.push(item.long);
 				data.push(rValD);
+
 			});
 				myHM.SetData(data);
 				myHM.SetBoost(1); // Optional, see documentation
 				myHM.SetDecay(0); // Optional, see documentation
 				var preUrl = myHM.GetURL();
-
+				alert(preUrl);
 				// Now render in our Google Map
 				var heatmapOverlay = new HMGoogleOverlay(preUrl);
-				m.addOverlay(heatmapOverlay);
+				//alert(m.addOverlay(heatmapOverlay));
+				alert(m);
 		});
 
 //	  myHM.SetData(data);
@@ -67,7 +72,7 @@
 	 }
 	 catch(e)
 	 {
-	  alert(e.Message);
+	  //alert(e.Message);
 	 }
 	}
 </script>
