--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,4 +1,5 @@
 <% content_for :head do %>
+<%= javascript_include_tag 'mmanager.js' %>
 <%= javascript_include_tag 'multimarker.js' %>
 <% end %>
 
