--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -18,5 +18,6 @@
 </p>
 
 
-<%= link_to 'Edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', comments_path %>
+
+<%= link_to 'Edit', edit_site_comment_path(@site,@comment) %> |
+<%= link_to 'Back', site_comments_path(@site) %>
