--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New comment</h1>
 
-<% form_for([@proposal, @comment]) do |f| %>
+<% form_for([@site, @comment]) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -24,4 +24,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', site_proposal_comments_path %>
+<%= link_to 'Back', site_comments_path(@site)%>
