--- a/app/views/layouts/proposals.html.erb
+++ b/app/views/layouts/proposals.html.erb
@@ -6,6 +6,26 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Proposals: <%= controller.action_name %></title>
   <%= stylesheet_link_tag 'scaffold' %>
+  <%= javascript_include_tag 'swfobject.js' %>
+	<script type="text/javascript">
+		var flashvars =
+		{
+			latitude: "<%= @site.latitude %>",
+			longditude: "<%= @site.longitude %>" ,
+			siteID: "<%= @site.id %>",
+            proposalID: "<%= @proposal.id %>",
+			loadData: "<%=@proposal.flash_data %>",
+            apiKey: "ABQIAAAAYSHQGH7DwQYnligG_HNMtRT2yXp_ZAY8_ufC3CFXhHIE1NvwkxTpRqH6LmxrFYRSv3GdHHrQfia4Yg"
+		};
+		var params =
+		{
+			menu: "false",
+			allowfullscreen: "false",
+			scale: "noorder"
+		};
+		var attributes = {};
+		swfobject.embedSWF("/citipedia.swf", "Citipedia", "800px", "600px", "9.0.0", "expressInstall.swf", flashvars, params, attributes);
+    </script>
 </head>
 <body>
 
