--- a/app/views/proposals/_list.erb
+++ b/app/views/proposals/_list.erb
@@ -3,9 +3,9 @@
 <% @proposals.each do |proposal| %>
   <tr>
     <td><%=h proposal.title %></td>
-    <td><%= link_to 'Show', proposal %></td>
+    <td><%= link_to 'Show', site_proposal_path(proposal.site,proposal) %></td>
     <td><%= link_to 'Edit', edit_site_proposal_path(proposal.site,proposal) %></td>
-    <td><%= link_to 'Destroy', proposal, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Destroy', site_proposal_path(proposal.site,proposal), :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
