--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -6,11 +6,15 @@
   Description:
   <%=h @proposal.description %>
 </p>
+<p>
+  Flash:
+  <%=h @proposal.flash_data %>
+</p>
 
-<h2>Comments for this proposal</h2>
-
-<% @comments=@proposal.comments %>
-<%=  render :partial=>'comments/list'%>
+  <div id="Citipedia">
+	<p>Either you don't have Javascript enabled or you need to manually <a href="http://www.adobe.com/go/getflashplayer" target="_blank">install Flash</a>.
+	<a href="http://www.adobe.com/go/getflashplayer"><img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" /></a></p>
+  </div>
 
 <%= link_to 'Edit', edit_site_proposal_path(@site,@proposal) %> |
 <%= link_to 'Back', site_proposals_path %>
