--- a/app/views/layouts/sites.html.erb
+++ b/app/views/layouts/sites.html.erb
@@ -1,17 +1,28 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Sites: <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'scaffold' %>
+<html lang="en">
+	<head>
+		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+		<title>Citipedia - making where you live better</title>
+		
+		<link rel="stylesheet" href="/stylesheets/reset.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="/stylesheets/layout.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="/stylesheets/site.css" type="text/css" media="screen" />
+		
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+		<script type="text/javascript">
+		$(document).ready(function() {
+			$("#main li h2").each(function(i) {
+				$(this).prepend((i + 1) + '. ');
+			});
+			$('#listings li').addClass('tabbed').click(function() {
+				$('#list');
+			}).eq(0).addClass("active");
+		});
+		</script>
+		<script src="http://maps.google.com/maps?file=api&v=2.133d&key=ABQIAAAAYSHQGH7DwQYnligG_HNMtRT2yXp_ZAY8_ufC3CFXhHIE1NvwkxTpRqH6LmxrFYRSv3GdHHrQfia4Yg" type="text/javascript"></script>
 
-<!--><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>-->
-<%= javascript_include_tag 'jquery.js' %>
-<!--<script src="http://maps.google.com/maps?file=api&v=2.133d&key=ABQIAAAAYSHQGH7DwQYnligG_HNMtRRi_j0U6kJrkFvY4-OX2XYmEAa76BSbYtjHLWhy721irRhOUCrXiNZ2Ug" type="text/javascript"></script>-->
-<script src="http://maps.google.com/maps?file=api&v=2.133d&key=ABQIAAAAYSHQGH7DwQYnligG_HNMtRT2yXp_ZAY8_ufC3CFXhHIE1NvwkxTpRqH6LmxrFYRSv3GdHHrQfia4Yg" type="text/javascript"></script>
-
+	
 	<%= yield :head %>
 </head>
 <body>
@@ -19,5 +30,13 @@
 
 <%= yield %>
 
-</body>
+			<div id="footer">
+				Website designed and built by the Citipiedia SI Camp Team &copy; 2009 Citipedia
+			</div>
+		</div>
+	</body>
 </html>
+
+
+
+
