--- a/app/views/sites/new_old.html.erb
+++ b/app/views/sites/new_old.html.erb
@@ -83,50 +83,70 @@
 
 <% end %>
 
-<div id="content">
-                <div id="search">
-                    <h2>Start a new search</h2>
-                    <form id="postcode-search" action="" method="get">
-                        <label for="postcode">Postcode search</label>
-                        <input id="postcode" name="postcode" type="text" value="Postcode search" />
-                        <input type="image" value="Go" src="/images/go.png" />
-                    </form>
-                    <form id="keyword-search" action="" method="get">
-                        <label for="p">Keyword search</label>
-                        <input id="p" name="p" type="text" value="Keyword search" />
-                        <input type="image" value="Go" src="/images/go.png" />
-                    </form>
-                </div>
-                
-                <div id="add-place">
-                    <form id="add-form" action="place.html" method="get">
-                        <h2>Add a place</h2>
-                        <p id="name">
-                            <label for="place-name">NAME THIS PLACE</label>
-                            <input type="text" id="place-name" name="place-name" />
-                        </p>
-                        <p>
-                            <label for="your-name">YOUR NAME</label>
-                            <input type="text" id="your-name" name="your-name" />
-                        </p>
-                        <p>
-                            <label for="zoning">ZONING</label>
-                            <input type="text" id="zoning" name="zoning" />
-                        </p>
-                        <p>
-                            <label for="images">IMAGES</label>
-                            <input type="file" id="images" name="images" />
-                        </p>
-                        <p>
-                            <label for="desc">WHAT SHOULD HAPPEN HERE?</label>
-                            <textarea id="desc" name="desc"></textarea>
-                        </p>
-                        <p>
-                            <input type="submit" value="Add" />
-                        </p>
-                    </form>
-                </div>
-                
-                <div id="map" style="width: 300px; height: 400px;">
-                </div>
-            </div>
+</head>
+
+
+<h1>New site</h1>
+<div id="map_canvas" style="width: 600px; height: 450px"></div>
+
+
+
+
+<% form_for(@site) do |f| %>
+  <%= f.error_messages %>
+  <p>
+    <%= f.label :title %><br />
+    <%= f.text_field :title %>
+  </p>
+  <p>
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </p>
+  <p>
+    <%= f.label :btype %><br />
+    <%= f.text_field :btype %>
+  </p>
+  <p>
+    <%= f.label :photo %><br />
+    <%= f.text_field :photo %>
+  </p>
+  <p>
+    <%= f.label :latitude %><br />
+    <%= f.text_field :latitude %>
+  </p>
+  <p>
+    <%= f.label :longitude %><br />
+    <%= f.text_field :longitude %>
+  </p>
+  <p>
+    <%= f.label :tag %><br />
+    <span> (Comma separated) </span>
+    <%= f.text_field :tag %>
+  </p>
+
+  <p>
+    <%= f.label :description %><br />
+    <%= f.text_area :description %>
+  </p>
+  <p>
+    <%= f.submit 'Create' %>
+  </p>
+<% end %>
+
+<%= link_to 'Back', sites_path %>
+
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
+
+
+
+
+
+
+
+
