--- a/app/views/sites/new_old.html.erb
+++ b/app/views/sites/new_old.html.erb
@@ -87,7 +87,7 @@
 
 
 <h1>New site</h1>
-<div id="map_canvas" style="width: 600px; height: 450px"></div>
+<div id="map" style="width: 600px; height: 450px"></div>
 
 
 
