--- a/app/views/layouts/sites.html.erb
+++ b/app/views/layouts/sites.html.erb
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="/stylesheets/layout.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="/stylesheets/site.css" type="text/css" media="screen" />
 		
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+		<!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>-->
 		<script type="text/javascript">
 		$(document).ready(function() {
 			$("#main li h2").each(function(i) {
@@ -20,13 +20,19 @@
 			}).eq(0).addClass("active");
 		});
 		</script>
-		<script src="http://maps.google.com/maps?file=api&v=2.133d&key=ABQIAAAAYSHQGH7DwQYnligG_HNMtRT2yXp_ZAY8_ufC3CFXhHIE1NvwkxTpRqH6LmxrFYRSv3GdHHrQfia4Yg" type="text/javascript"></script>
+		<!--<script src="http://maps.google.com/maps?file=api&v=2.133d&key=ABQIAAAAYSHQGH7DwQYnligG_HNMtRT2yXp_ZAY8_ufC3CFXhHIE1NvwkxTpRqH6LmxrFYRSv3GdHHrQfia4Yg" type="text/javascript"></script>-->
 
 	
 	<%= yield :head %>
 </head>
 <body>
-<p style="color: green"><%= flash[:notice] %></p>
+
+	<div id="container">
+		
+		<div id="header-home">
+			<h1>Citipedia</h1>
+			<span id="strapline">Making where you live better</span>
+		</div>
 
 <%= yield %>
 
