--- a/app/views/sites/home.html.erb
+++ b/app/views/sites/home.html.erb
@@ -1,36 +1,6 @@
-<!DOCTYPE html>
-
-<html lang="en">
-	<head>
-		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-		<title>Citipedia - making where you live better</title>
-		
-		<link rel="stylesheet" href="/stylesheets/reset.css" type="text/css" media="screen" />
-		<link rel="stylesheet" href="/stylesheets/layout.css" type="text/css" media="screen" />
-		<link rel="stylesheet" href="/stylesheets/site.css" type="text/css" media="screen" />
-		<link rel="stylesheet" href="/stylesheets/cover.css" type="text/css" media="screen" />
-		
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-		<script type="text/javascript">
-		$(document).ready(function() {
-			$("#main li h2").each(function(i) {
-				$(this).prepend((i + 1) + '. ');
-			});
-			$('#listings li').addClass('tabbed').click(function() {
-				$('#list');
-			}).eq(0).addClass("active");
-		});
-		</script>
-		
-	</head>
-	<body>
-		<div id="container">
-			
-			<div id="header-home">
-				<h1>Citipedia</h1>
-				<span id="strapline">Making where you live better</span>
-			</div>
-			
+<% content_for :head do %>
+<link rel="stylesheet" href="/stylesheets/cover.css" type="text/css" media="screen" />
+<% end%>
 			<div id="intro">
 				<h2>What can I do?</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eros leo, cursus sit amet venenatis sed, 
@@ -115,10 +85,3 @@
 					<h3>My Places</h3>
 				</li>
 			</ul>
-			
-			<div id="footer">
-				Website designed and built by the Citipiedia SI Camp Team &copy; 2009 Citipedia
-			</div>
-		</div>
-	</body>
-</html>
