--- a/public/stylesheets/cover.css
+++ b/public/stylesheets/cover.css
@@ -202,7 +202,9 @@
 
 /* =footer */
 #footer {
-	color: #00AFEF;
-	font-size: 0.8em;
-	padding: 20px 0px 50px;
+	color: #00AFEF !important;
+	font-size: 0.8em !important;
+	padding: 20px 0px 50px !important;
+	background-color: transparent;
+	border: none;
 }
