--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -12,7 +12,7 @@ Yeah right....
 
 /* Clear-fix hack for clearing floated elements
 http://www.positioniseverything.net/easyclearing.html */
-.clearfix:after, #main:after, ol.listing:after, #nav:after, #search:after {
+.clearfix:after, #main:after, ol.listing:after, #nav:after, #search:after, #content:after {
     content: ".";
     display: block;
     height: 0;
